force-app/main/default/objects/Testing_Path__c/Testing_Path__c.object-meta.xml
<CustomObject>
    <label>Testing Path</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Testing Path Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testing Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>