force-app/main/default/objects/Testing_Path__c/recordTypes/RecordType_2.recordType-meta.xml
<RecordType>
    <fullName>RecordType_2</fullName>
    <active>true</active>
    <label>RecordType_2</label>
</RecordType>